--- a/app/components/industries/industry.dashboard.html
+++ b/app/components/industries/industry.dashboard.html
@@ -13,7 +13,7 @@
                         </div>
                     </div>
                     <div class="col-xs-8" >
-                        <canvas class="chart chart-line" data="charts.people.data" labels="charts.people.labels" series="charts.people.series" colours="charts.people.colors" options="charts.options" height="95" style="padding: 0 15px;">
+                        <canvas class="chart chart-line" data="ind.charts.people.data" labels="ind.charts.people.labels" series="ind.charts.people.series" colours="ind.charts.people.colors" options="ind.charts.options" height="95" style="padding: 0 15px;">
                         </canvas>
                     </div>
                     <div class="col-xs-2">
@@ -86,8 +86,8 @@
                         </div>
                     </div>
                     <div class="col-xs-8" >
-                        <canvas class="chart chart-line" data="charts.startups.data"
-                                labels="charts.startups.labels" series="charts.startups.series" colours="charts.startups.colors" options="charts.options" height="95" style="padding: 0 15px;">
+                        <canvas class="chart chart-line" data="ind.charts.startups.data"
+                                labels="ind.charts.startups.labels" series="ind.charts.startups.series" colours="ind.charts.startups.colors" options="ind.charts.options" height="95" style="padding: 0 15px;">
                         </canvas>
                     </div>
                     <div class="col-xs-2">
@@ -160,8 +160,8 @@
                         </div>
                     </div>
                     <div class="col-xs-8" >
-                        <canvas class="chart chart-line" data="charts.jobs.data"
-                                labels="charts.jobs.labels" series="charts.jobs.series" colours="charts.jobs.colors" options="charts.options" height="95" style="padding: 0 15px;">
+                        <canvas class="chart chart-line" data="ind.charts.jobs.data"
+                                labels="ind.charts.jobs.labels" series="ind.charts.jobs.series" colours="ind.charts.jobs.colors" options="ind.charts.options" height="95" style="padding: 0 15px;">
                         </canvas>
                     </div>
                     <div class="col-xs-2">
