--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -71,7 +71,14 @@
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.locations">
                         <a ui-sref="location.dashboard({community_key: item.key, community: item})" ng-class="{active: nav.path.includes(item.key)}"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
-                        <ul ng-if="nav.path.includes(item.key) && $state.current.name=='location.dashboard'" ng-include="'components/common/nav/nav_subitems.html'"></ul>
+                        <ul ng-if="nav.path.includes(item.key) && $state.current.name.split('.')[0]=='location'">
+                            <li ui-sref="location.people({community_key: item.key})" ui-sref-active="active">
+                                <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
+                            </li>
+                            <li ui-sref="location.startups" ui-sref-active="active">
+                                <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;Startups</a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </li>
@@ -81,8 +88,8 @@
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.industries">
                         <a ui-sref="industry.dashboard({industry_key: item.key, community: item})" ng-class="{active: nav.path.includes(item.key)}"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
-                        <ul ng-if="nav.path.includes(item.key) && $state.current.name=='industry.dashboard'">
-                            <li ui-sref="industry.dashboard.people" ui-sref-active="active">
+                        <ul ng-if="nav.path.includes(item.key) && $state.current.name.split('.')[0]=='industry'">
+                            <li ui-sref="industry.people({industry_key: item.key})" ui-sref-active="active">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
                             </li>
                             <li ui-sref="industry.startups" ui-sref-active="active">
@@ -98,7 +105,7 @@
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.networks">
                         <a ui-sref="network.dashboard({community_key: item.key, community: item})" ng-class="{active: nav.path.includes(item.key)}"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
-                        <ul ng-if="nav.path.includes(item.key) && $state.current.name=='network.dashboard'" ng-include="'components/common/nav/nav_subitems.html'"></ul>
+                        <ul ng-if="nav.path.includes(item.key) && $state.current.name.split('.')[0]=='network'" ng-include="'components/common/nav/nav_subitems.html'"></ul>
                     </li>
                 </ul>
             </li>
@@ -113,4 +120,11 @@
 </div>
 
 <!-- Main Content -->
-<div ui-view></div>
+<div ui-view>
+    <div id="wrapper">
+        <div ui-view="header"></div>
+        <div class="content">
+            <div ui-view="content"></div>
+        </div>
+    </div>
+</div>
