added vert line to people list

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -54,6 +54,12 @@
   line-height: 2;
 }
 
+.user-row-border {
+  border-right: 1px solid #eee;
+  margin-right: -15px;
+  padding-right: 15px;
+}
+
 .user-img {
   height:58px;
   max-width: 58px;
