--- a/app/less/panels.less
+++ b/app/less/panels.less
@@ -227,6 +227,10 @@ ul.panel-list {
   margin-bottom: 0;
 }
 
+ul.panel-list li {
+  margin: 1px 0;
+}
+
 ul.panel-list li a {
   padding: 8px 15px;
   display: block;
@@ -241,8 +245,8 @@ ul.panel-list li.active a {
   background: #f7f9fa;
   border: 1px solid #e4e5e7;
   font-weight: 600;
-  border-radius: 1px;
 }
+
 ul.panel-list li:hover a {
   font-weight: 600;
 }
