--- a/app/components/people/people.dashboard.html
+++ b/app/components/people/people.dashboard.html
@@ -84,8 +84,8 @@
                 <div class="pull-right">
                     <strong>{{people.users.start}} - {{people.users.end}}</strong> of <strong>{{people.users.total_count}}&nbsp;&nbsp;</strong>
                     <div class="btn-group btn-group-sm" style="margin-top: -2px;">
-                        <span ng-if="people.users.prev"><a ng-click="people.getUsers(people.users.prev)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
-                        <span ng-if="people.users.next"><a ng-click="people.getUsers(people.users.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
+                        <span ng-if="people.users.prev"><a ng-click="people.search(people.users.prev)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
+                        <span ng-if="people.users.next"><a ng-click="people.search(people.users.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
                     </div>
                 </div>
                 <div class="pull-right" style="margin-right: 25px; min-width: 175px;">
@@ -96,8 +96,7 @@
                         </ui-select-choices>
                     </ui-select>
                 </div>
-                <span ng-if="people.lastQuery" style="font-size: 17px;">People matching "<strong>{{people.lastQuery}}</strong>"</span>
-                <span ng-if="!people.lastQuery" style="font-size: 17px;" ng-bind-html="people.title"></span>
+                <span style="font-size: 17px;" ng-bind-html="people.title"></span>
                 <span><i ng-show="people.loadingPeople" class="fa fa-refresh fa-spin" style="padding: 4px; color: #aaa; font-size: 17px; margin-left: 5px;"></i></span>
             </div>
 
@@ -120,8 +119,8 @@
                 <div class="pull-right">
                     <strong>{{people.users.start}} - {{people.users.end}}</strong> of <strong>{{people.users.total_count}}&nbsp;&nbsp;</strong>
                     <div class="btn-group btn-group-sm" style="margin-top: -2px;">
-                        <span ng-if="people.users.prev"><a ng-click="people.getUsers(people.users.prev)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
-                        <span ng-if="people.users.next"><a ng-click="people.getUsers(people.users.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
+                        <span ng-if="people.users.prev"><a ng-click="people.search(people.users.prev)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
+                        <span ng-if="people.users.next"><a ng-click="people.search(people.users.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
                     </div>
                 </div>
             </div>
