--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -70,7 +70,7 @@
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.locations">
                         <a ui-sref="location.dashboard({community_key: item.key, community: item})" ng-class="{active: nav.path.includes(item.key)}"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
-                        <ul ng-if="nav.path.includes(item.key) && $state.current.name.split('.')[0]=='location'">
+                        <ul ng-if="nav.path.includes(item.key) && $state.includes('location')">
                             <li ui-sref="location.people({community_key: item.key, query: '*'})" ui-sref-active="active">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
                             </li>
