--- a/app/components/people/people.dashboard.list.html
+++ b/app/components/people/people.dashboard.list.html
@@ -14,7 +14,7 @@
         <div class="dash-row">
             <span class="text-muted" ng-bind-html="::item.value.profile.linkedin.headline | highlight:people.lastQuery"></span>
         </div>
-        <div ng-show="(showSummary || $state.includes('search')) && item.value.profile.linkedin.summary">
+        <div ng-show="(showSummary || $state.includes('*.search')) && item.value.profile.linkedin.summary">
             <div style="padding-bottom: 10px;">
                 <hr>
                 <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="::item.value.profile.linkedin.summary | linky:'_blank' | highlight:people.lastQuery | safe_html"></span>
