updated search placeholder

--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -16,7 +16,7 @@
                         </a>
                     </li>
                     <form id="searchform" ng-submit="nav.search(search.query)" role="search" class="navbar-form-custom" method="post">
-                        <input ng-model="search.query" type="text" placeholder="Search.." class="form-control" name="search">
+                        <input ng-model="search.query" type="text" placeholder="Search {{nav.community.profile.name}}.." class="form-control" name="search">
                     </form>
                 </div>
             </div>
