--- a/app/components/startups/startups.dashboard.html
+++ b/app/components/startups/startups.dashboard.html
@@ -50,7 +50,7 @@
         <div class="col-md-4 animated-panel zoomIn">
             <div class="hpanel hnavyblue">
                 <div class="panel-footer top" style="font-size: 17px;">
-                    <strong>Cluster</strong> Filters
+                    <strong>Industry</strong> Filters
                     <i ng-show="loadingIndustry" class="fa fa-refresh fa-spin pull-right" style="padding: 4px; color: #aaa;"></i>
                 </div>
                 <div class="panel-body filternav h226">
