--- a/app/components/networks/network.dashboard.html
+++ b/app/components/networks/network.dashboard.html
@@ -230,7 +230,7 @@
             <div class="hpanel forum-box">
 
                 <div class="panel-heading" style="border-bottom: 2px solid #34495E;">
-                    <h3>Top Clusters</h3>
+                    <h3>Top Industries</h3>
                 </div>
 
                 <div class="panel-body">
